--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Puls3: Comunidad online de gente pro y (no sé que más escribir)</title>
 	<link rel="stylesheet" href="public/css/normalize.css" />
+	<link rel="stylesheet" href="public/css/fonts.css" />
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="public/css/style.css" />
 </head>
@@ -17,7 +18,7 @@
 		<figure id="avatar">
 			<img src="public/img/avatar.jpg" />
 			<figcaption>
-				*
+				 
 			</figcaption>
 		</figure>
 	</header>
@@ -50,9 +51,9 @@
 				<a class="guardar_item" href="#">*</a>
 			</p>
 			<p class="votacion">
-				<a class="up" href="#">U</a>
+				<a class="up" href="#"></a>
 				3141
-				<a class="down" href="#">D</a>
+				<a class="down" href="#"></a>
 			</p>
 		</article>
 	</section>
