--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8" />
+
+	<meta name ="viewport" content="with=device-with">
 	<title>Puls3: Comunidad online de gente pro y (no sé que más escribir)</title>
 	<link rel="stylesheet" href="public/css/normalize.css" />
 	<link rel="stylesheet" href="public/css/fonts.css" />
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="public/css/style.css" />
+		<link rel="stylesheet" href="public/css/responsive.css" />
 </head>
 <body>
 	<!-- comentario de lo que sea -->
@@ -33,8 +36,79 @@
 			<li id="publicar_nav"><a href="#">Publicar</a></li>
 		</ul>
 	</nav>
+	<aside id="bienvenida">
+		<h2>Hola, registrate!</h2>+
+		<p>Es importante resgistrarte LOL</p>
+
+
+
+	</aside>
 	<section id="contenido">
 		<article class="item">
+			<figure class="imagen_item">
+				<img src="public/img/imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Una mirada a Leap Motion: El control Minority Report</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">Freddy Vega</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">categoria</a>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#">*</a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a>
+				3141
+				<a class="down" href="#"></a>
+			</p>
+		</article>
+			<article class="item">
+			<figure class="imagen_item">
+				<img src="public/img/imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Una mirada a Leap Motion: El control Minority Report</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">Freddy Vega</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">categoria</a>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#">*</a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a>
+				3141
+				<a class="down" href="#"></a>
+			</p>
+		</article>	<article class="item">
+			<figure class="imagen_item">
+				<img src="public/img/imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Una mirada a Leap Motion: El control Minority Report</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">Freddy Vega</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">categoria</a>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#">*</a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a>
+				3141
+				<a class="down" href="#"></a>
+			</p>
+		</article>	<article class="item">
 			<figure class="imagen_item">
 				<img src="public/img/imagen.jpg" />
 			</figure>
@@ -60,6 +134,9 @@
 	<footer>
 		<p><strong>Powered by Platzi!</strong></p>
 		<p>Mejorando.la 2013 ®</p>
+		<video>
+
+		</video>
 	</footer>
 </body>
 </html>
